<resources>
    <string name="app_name">Android Studio (Login Profile Management App)</string>
    <string name="home">Home</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_management">Profile Management</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>